--- a/2024-oct-24-python/pixi.toml
+++ b/2024-oct-24-python/pixi.toml
@@ -7,6 +7,9 @@ platforms = ["linux-64"]
 version = "0.1.0"
 
 [tasks]
+sync-conda = "pixi project export conda-environment environment.yaml"
+sync-pip = "uv pip compile --index-strategy unsafe-best-match --emit-index-url requirements.in requirements-jupyter.in requirements-nvidia.in -o requirements.txt"
+sync = { depends-on = ["sync-conda", "sync-pip"] }
 
 [dependencies]
 numba = ">=0.60.0,<0.61"
@@ -15,23 +18,10 @@ cuda-nvcc = ">=12,<13"
 cuda-nvrtc = ">=12,<13"
 cuda-version = "12.*"
 cudf = {version="24.10.*", channel="rapidsai"}
-# rmm = {channel="rapidsai"}
-# librmm = {channel="rapidsai"}
 matplotlib-base = ">=3.9.2,<4"
 cuda-python = ">=12.6.0,<13"
 cupy = ">=13.3.0,<14"
 pycuda = ">=2024.1,<2025"
-# rapids = {version="24.10.*", channel="rapidsai"}
-# dask-cuda = {version="24.10.*", channel="rapidsai"}
-# pylibcugraph = {channel="rapidsai"}
-# libcugraph = {channel="rapidsai"}
-# rapids-xgboost = {channel="rapidsai"}
-# libxgboost = {channel="rapidsai"}
-
-# rapids = "24.10.*"
-# cupy = {version=">=12", channel="conda-forge"}
-# ucx = {channel="conda-forge"}
-# datashader = {channel="conda-forge"}
 
 [pypi-options]
 extra-index-urls = ["https://pypi.nvidia.com"]
@@ -39,4 +29,8 @@ extra-index-urls = ["https://pypi.nvidia.com"]
 [pypi-dependencies]
 polars = { version = ">=1.8.2, <2", extras = ["gpu"] }
 jupyterlab = ">=4.2.5, <5"
+jupyterlab-myst = ">=2.4.2, <3"
+jupyterlab-git = ">=0.50.1, <0.51"
+jupyterlab-lsp = ">=5.1.0, <6"
+python-lsp-server = { version = ">=1.12.0, <2", extras = ["all"] }
 
