--- a/2024-oct-24-python/requirements.txt
+++ b/2024-oct-24-python/requirements.txt
@@ -19,6 +19,8 @@ argon2-cffi-bindings==21.2.0
     # via argon2-cffi
 arrow==1.3.0
     # via isoduration
+astroid==3.3.5
+    # via pylint
 asttokens==2.4.1
     # via stack-data
 async-lru==2.0.4
@@ -28,6 +30,8 @@ attrs==24.2.0
     #   aiohttp
     #   jsonschema
     #   referencing
+autopep8==2.0.4
+    # via python-lsp-server
 babel==2.16.0
     # via jupyterlab-server
 beautifulsoup4==4.12.3
@@ -54,6 +58,8 @@ cloudpickle==3.1.0
     # via
     #   dask
     #   distributed
+colorama==0.4.6
+    # via nbdime
 comm==0.2.2
     # via ipykernel
 contourpy==1.3.0
@@ -112,16 +118,22 @@ decorator==5.1.1
     # via ipython
 defusedxml==0.7.1
     # via nbconvert
+dill==0.3.9
+    # via pylint
 distributed==2024.9.0
     # via rapids-dask-dependency
 distributed-ucxx-cu12==0.40.0
     # via raft-dask-cu12
+docstring-to-markdown==0.15
+    # via python-lsp-server
 executing==2.1.0
     # via stack-data
 fastjsonschema==2.20.0
     # via nbformat
 fastrlock==0.8.2
     # via cupy-cuda12x
+flake8==7.1.1
+    # via python-lsp-server
 fonttools==4.54.1
     # via matplotlib
 fqdn==1.5.1
@@ -136,6 +148,10 @@ fsspec==2024.9.0
     #   cugraph-cu12
     #   dask
     #   dask-cudf-cu12
+gitdb==4.0.11
+    # via gitpython
+gitpython==3.1.43
+    # via nbdime
 h11==0.14.0
     # via httpcore
 httpcore==1.0.6
@@ -149,14 +165,20 @@ idna==3.10
     #   jsonschema
     #   requests
     #   yarl
+importlib-metadata==8.5.0
+    # via yapf
 ipykernel==6.29.5
     # via jupyterlab
 ipython==8.28.0
     # via ipykernel
 isoduration==20.11.0
     # via jsonschema
+isort==5.13.2
+    # via pylint
 jedi==0.19.1
-    # via ipython
+    # via
+    #   ipython
+    #   python-lsp-server
 jinja2==3.1.4
     # via
     #   distributed
@@ -164,6 +186,7 @@ jinja2==3.1.4
     #   jupyterlab
     #   jupyterlab-server
     #   nbconvert
+    #   nbdime
 joblib==1.4.2
     # via
     #   cuml-cu12
@@ -196,16 +219,32 @@ jupyter-core==5.7.2
 jupyter-events==0.10.0
     # via jupyter-server
 jupyter-lsp==2.2.5
-    # via jupyterlab
+    # via
+    #   jupyterlab
+    #   jupyterlab-lsp
 jupyter-server==2.14.2
     # via
     #   jupyter-lsp
+    #   jupyter-server-mathjax
     #   jupyterlab
+    #   jupyterlab-git
+    #   jupyterlab-myst
     #   jupyterlab-server
+    #   nbdime
     #   notebook-shim
+jupyter-server-mathjax==0.2.6
+    # via nbdime
 jupyter-server-terminals==0.5.3
     # via jupyter-server
 jupyterlab==4.2.5
+    # via
+    #   -r requirements-jupyter.in
+    #   jupyterlab-lsp
+jupyterlab-git==0.50.1
+    # via -r requirements-jupyter.in
+jupyterlab-lsp==5.1.0
+    # via -r requirements-jupyter.in
+jupyterlab-myst==2.4.2
     # via -r requirements-jupyter.in
 jupyterlab-pygments==0.3.0
     # via nbconvert
@@ -246,6 +285,11 @@ matplotlib-inline==0.1.7
     # via
     #   ipykernel
     #   ipython
+mccabe==0.7.0
+    # via
+    #   flake8
+    #   pylint
+    #   python-lsp-server
 mdurl==0.1.2
     # via markdown-it-py
 mistune==3.0.2
@@ -260,11 +304,15 @@ nbclient==0.10.0
     # via nbconvert
 nbconvert==7.16.4
     # via jupyter-server
+nbdime==4.0.2
+    # via jupyterlab-git
 nbformat==5.10.4
     # via
     #   jupyter-server
+    #   jupyterlab-git
     #   nbclient
     #   nbconvert
+    #   nbdime
 nest-asyncio==1.6.0
     # via ipykernel
 notebook-shim==0.2.4
@@ -348,10 +396,12 @@ packaging==24.1
     #   ipykernel
     #   jupyter-server
     #   jupyterlab
+    #   jupyterlab-git
     #   jupyterlab-server
     #   matplotlib
     #   nbconvert
     #   pylibcudf-cu12
+    #   pytoolconfig
     #   treelite
 pandas==2.2.2
     # via
@@ -367,14 +417,21 @@ parso==0.8.4
 partd==1.4.2
     # via dask
 pexpect==4.9.0
-    # via ipython
+    # via
+    #   ipython
+    #   jupyterlab-git
 pillow==10.4.0
     # via matplotlib
 platformdirs==4.3.6
     # via
     #   jupyter-core
     #   pycuda
+    #   pylint
+    #   pytoolconfig
     #   pytools
+    #   yapf
+pluggy==1.5.0
+    # via python-lsp-server
 polars==1.8.2
     # via
     #   -r requirements-nvidia.in
@@ -400,14 +457,26 @@ pyarrow==17.0.0
     #   cudf-cu12
     #   dask-expr
     #   pylibcudf-cu12
+pycodestyle==2.12.1
+    # via
+    #   autopep8
+    #   flake8
+    #   python-lsp-server
 pycparser==2.22
     # via cffi
 pycuda==2024.1.2
     # via -r requirements.in
+pydocstyle==6.3.0
+    # via python-lsp-server
+pyflakes==3.2.0
+    # via
+    #   flake8
+    #   python-lsp-server
 pygments==2.18.0
     # via
     #   ipython
     #   nbconvert
+    #   nbdime
     #   rich
 pylibcudf-cu12==24.10.1
     # via
@@ -421,6 +490,8 @@ pylibraft-cu12==24.10.0
     #   cuvs-cu12
     #   pylibcugraph-cu12
     #   raft-dask-cu12
+pylint==3.3.1
+    # via python-lsp-server
 pynvjitlink-cu12==0.3.0
     # via cudf-cu12
 pynvml==11.4.1
@@ -438,6 +509,12 @@ python-dateutil==2.9.0.post0
     #   pandas
 python-json-logger==2.0.7
     # via jupyter-events
+python-lsp-jsonrpc==1.1.2
+    # via python-lsp-server
+python-lsp-server==1.12.0
+    # via -r requirements-jupyter.in
+pytoolconfig==1.3.1
+    # via rope
 pytools==2024.1.14
     # via pycuda
 pytz==2024.2
@@ -470,7 +547,9 @@ referencing==0.35.1
     #   jsonschema-specifications
     #   jupyter-events
 requests==2.32.3
-    # via jupyterlab-server
+    # via
+    #   jupyterlab-server
+    #   nbdime
 rfc3339-validator==0.1.4
     # via
     #   jsonschema
@@ -490,6 +569,8 @@ rmm-cu12==24.10.0
     #   pylibcugraph-cu12
     #   pylibraft-cu12
     #   ucxx-cu12
+rope==1.13.0
+    # via python-lsp-server
 rpds-py==0.20.0
     # via
     #   jsonschema
@@ -508,10 +589,14 @@ six==1.16.0
     #   bleach
     #   python-dateutil
     #   rfc3339-validator
+smmap==5.0.1
+    # via gitdb
 sniffio==1.3.1
     # via
     #   anyio
     #   httpx
+snowballstemmer==2.2.0
+    # via pydocstyle
 sortedcontainers==2.4.0
     # via distributed
 soupsieve==2.6
@@ -526,6 +611,10 @@ terminado==0.18.1
     #   jupyter-server-terminals
 tinycss2==1.3.0
     # via nbconvert
+tomli==2.0.2
+    # via yapf
+tomlkit==0.13.2
+    # via pylint
 toolz==1.0.0
     # via
     #   dask
@@ -538,6 +627,7 @@ tornado==6.4.1
     #   jupyter-client
     #   jupyter-server
     #   jupyterlab
+    #   nbdime
     #   terminado
 traitlets==5.14.3
     # via
@@ -549,6 +639,7 @@ traitlets==5.14.3
     #   jupyter-events
     #   jupyter-server
     #   jupyterlab
+    #   jupyterlab-git
     #   matplotlib-inline
     #   nbclient
     #   nbconvert
@@ -570,6 +661,10 @@ ucx-py-cu12==0.40.0
     #   raft-dask-cu12
 ucxx-cu12==0.40.0
     # via distributed-ucxx-cu12
+ujson==5.10.0
+    # via
+    #   python-lsp-jsonrpc
+    #   python-lsp-server
 uri-template==1.3.0
     # via jsonschema
 urllib3==2.2.3
@@ -586,9 +681,15 @@ webencodings==0.5.1
     #   tinycss2
 websocket-client==1.8.0
     # via jupyter-server
+whatthepatch==1.0.6
+    # via python-lsp-server
+yapf==0.40.2
+    # via python-lsp-server
 yarl==1.15.2
     # via aiohttp
 zict==3.0.0
     # via
     #   dask-cuda
     #   distributed
+zipp==3.20.2
+    # via importlib-metadata
