--- a/2024-oct-24-python/requirements.txt
+++ b/2024-oct-24-python/requirements.txt
@@ -493,7 +493,9 @@ pylibraft-cu12==24.10.0
 pylint==3.3.1
     # via python-lsp-server
 pynvjitlink-cu12==0.3.0
-    # via cudf-cu12
+    # via
+    #   -r requirements-nvidia.in
+    #   cudf-cu12
 pynvml==11.4.1
     # via
     #   dask-cuda
