--- a/2024-oct-24-python/environment.yaml
+++ b/2024-oct-24-python/environment.yaml
@@ -1,4 +1,4 @@
-name: gpu-python-webinar
+name: default
 channels:
 - conda-forge
 - rapidsai
@@ -6,6 +6,8 @@ channels:
 - nodefaults
 dependencies:
 - numba >=0.60.0,<0.61
+- rapidsai::pynvjitlink
+- rapidsai::libnvjitlink
 - python 3.12.*
 - cuda-nvcc >=12,<13
 - cuda-nvrtc >=12,<13
@@ -15,10 +17,12 @@ dependencies:
 - cuda-python >=12.6.0,<13
 - cupy >=13.3.0,<14
 - pycuda >=2024.1,<2025
+- polars 1.8.*
+- pylibcudf 24.10.*
 - pip
 - pip:
   - --extra-index-url https://pypi.nvidia.com/
-  - polars[gpu]>=1.8.2, <2
+  - cudf-polars-cu12>=24
   - jupyterlab>=4.2.5, <5
   - jupyterlab-myst>=2.4.2, <3
   - jupyterlab-git>=0.50.1, <0.51
