--- a/2024-oct-24-python/requirements-nvidia.in
+++ b/2024-oct-24-python/requirements-nvidia.in
@@ -1,4 +1,6 @@
 --extra-index-url=https://pypi.nvidia.com
+# https://numba.readthedocs.io/en/stable/cuda/minor_version_compatibility.html#minor-version-compatibility
+pynvjitlink-cu12
 # https://rapids.ai/#quick-start
 cudf-cu12==24.10.*
 dask-cudf-cu12==24.10.*
