--- a/2024-oct-24-python/environment.yaml
+++ b/2024-oct-24-python/environment.yaml
@@ -5,26 +5,25 @@ channels:
 - nvidia
 - nodefaults
 dependencies:
+- python 3.10.*
+- matplotlib-base >=3.9,<4
 - numba >=0.60.0,<0.61
-- rapidsai::pynvjitlink
-- rapidsai::libnvjitlink
-- python 3.12.*
-- cuda-nvcc >=12,<13
-- cuda-nvrtc >=12,<13
-- cuda-version 12.*
-- rapidsai::cudf 24.10.*
-- matplotlib-base >=3.9.2,<4
-- cuda-python >=12.6.0,<13
-- cupy >=13.3.0,<14
+- cuda-version >=11.2,<12.0
+- cudatoolkit *
+- rapidsai::cubinlinker
+- ptxcompiler *
+- rapidsai::cudf 23.*
+- rapidsai::rmm 23.*
+- rapidsai::librmm 23.*
+- cupy >=11.6.0,<12
 - pycuda >=2024.1,<2025
-- polars 1.8.*
-- pylibcudf 24.10.*
+- nvidia::cuda-nvcc >=11,<12
 - pip
 - pip:
   - --extra-index-url https://pypi.nvidia.com/
-  - cudf-polars-cu12>=24
   - jupyterlab>=4.2.5, <5
   - jupyterlab-myst>=2.4.2, <3
   - jupyterlab-git>=0.50.1, <0.51
   - jupyterlab-lsp>=5.1.0, <6
   - python-lsp-server[all]>=1.12.0, <2
+  - pytest>=8.3.3, <9
