--- a/2024-oct-24-python/requirements.txt
+++ b/2024-oct-24-python/requirements.txt
@@ -25,6 +25,8 @@ asttokens==2.4.1
     # via stack-data
 async-lru==2.0.4
     # via jupyterlab
+async-timeout==4.0.3
+    # via aiohttp
 attrs==24.2.0
     # via
     #   aiohttp
@@ -39,7 +41,7 @@ beautifulsoup4==4.12.3
 bleach==6.1.0
     # via nbconvert
 cachetools==5.5.0
-    # via cudf-cu12
+    # via cudf-cu11
 certifi==2024.8.30
     # via
     #   httpcore
@@ -64,35 +66,37 @@ comm==0.2.2
     # via ipykernel
 contourpy==1.3.0
     # via matplotlib
-cuda-python==12.6.0
-    # via
-    #   -r requirements.in
-    #   cudf-cu12
-    #   cuvs-cu12
-    #   pylibcudf-cu12
-    #   pylibraft-cu12
-    #   rmm-cu12
-cudf-cu12==24.10.1
+cubinlinker-cu11==0.3.0.post2
     # via
     #   -r requirements-nvidia.in
-    #   cugraph-cu12
-    #   cuml-cu12
-    #   dask-cudf-cu12
-cudf-polars-cu12==24.10.1
-    # via polars
-cugraph-cu12==24.10.0
-    # via -r requirements-nvidia.in
-cuml-cu12==24.10.0
-    # via -r requirements-nvidia.in
-cupy-cuda12x==13.3.0
+    #   cudf-cu11
+cuda-python==11.8.3
     # via
     #   -r requirements.in
-    #   cudf-cu12
-    #   cugraph-cu12
-    #   cuml-cu12
-    #   dask-cudf-cu12
-cuvs-cu12==24.10.0
-    # via cuml-cu12
+    #   cudf-cu11
+    #   cuvs-cu11
+    #   pylibcudf-cu11
+    #   pylibraft-cu11
+    #   rmm-cu11
+cudf-cu11==24.10.1
+    # via
+    #   -r requirements-nvidia.in
+    #   cugraph-cu11
+    #   cuml-cu11
+    #   dask-cudf-cu11
+cugraph-cu11==24.10.0
+    # via -r requirements-nvidia.in
+cuml-cu11==24.10.0
+    # via -r requirements-nvidia.in
+cupy-cuda11x==13.3.0
+    # via
+    #   -r requirements.in
+    #   cudf-cu11
+    #   cugraph-cu11
+    #   cuml-cu11
+    #   dask-cudf-cu11
+cuvs-cu11==24.10.0
+    # via cuml-cu11
 cycler==0.12.1
     # via matplotlib
 dask==2024.9.0
@@ -102,14 +106,14 @@ dask==2024.9.0
     #   rapids-dask-dependency
 dask-cuda==24.10.0
     # via
-    #   cugraph-cu12
-    #   cuml-cu12
-    #   raft-dask-cu12
-dask-cudf-cu12==24.10.1
+    #   cugraph-cu11
+    #   cuml-cu11
+    #   raft-dask-cu11
+dask-cudf-cu11==24.10.1
     # via
     #   -r requirements-nvidia.in
-    #   cugraph-cu12
-    #   cuml-cu12
+    #   cugraph-cu11
+    #   cuml-cu11
 dask-expr==1.1.14
     # via rapids-dask-dependency
 debugpy==1.8.7
@@ -122,16 +126,20 @@ dill==0.3.9
     # via pylint
 distributed==2024.9.0
     # via rapids-dask-dependency
-distributed-ucxx-cu12==0.40.0
-    # via raft-dask-cu12
+distributed-ucxx-cu11==0.40.0
+    # via raft-dask-cu11
 docstring-to-markdown==0.15
     # via python-lsp-server
+exceptiongroup==1.2.2
+    # via
+    #   anyio
+    #   ipython
 executing==2.1.0
     # via stack-data
 fastjsonschema==2.20.0
     # via nbformat
 fastrlock==0.8.2
-    # via cupy-cuda12x
+    # via cupy-cuda11x
 flake8==7.1.1
     # via python-lsp-server
 fonttools==4.54.1
@@ -144,10 +152,10 @@ frozenlist==1.4.1
     #   aiosignal
 fsspec==2024.9.0
     # via
-    #   cudf-cu12
-    #   cugraph-cu12
+    #   cudf-cu11
+    #   cugraph-cu11
     #   dask
-    #   dask-cudf-cu12
+    #   dask-cudf-cu11
 gitdb==4.0.11
     # via gitpython
 gitpython==3.1.43
@@ -166,7 +174,9 @@ idna==3.10
     #   requests
     #   yarl
 importlib-metadata==8.5.0
-    # via yapf
+    # via
+    #   dask
+    #   yapf
 ipykernel==6.29.5
     # via jupyterlab
 ipython==8.28.0
@@ -189,8 +199,8 @@ jinja2==3.1.4
     #   nbdime
 joblib==1.4.2
     # via
-    #   cuml-cu12
-    #   raft-dask-cu12
+    #   cuml-cu11
+    #   raft-dask-cu11
 json5==0.9.25
     # via jupyterlab-server
 jsonpointer==3.0.0
@@ -252,16 +262,16 @@ jupyterlab-server==2.27.3
     # via jupyterlab
 kiwisolver==1.4.7
     # via matplotlib
-libcudf-cu12==24.10.1
+libcudf-cu11==24.10.1
     # via
-    #   cudf-cu12
-    #   pylibcudf-cu12
-libucx-cu12==1.17.0
+    #   cudf-cu11
+    #   pylibcudf-cu11
+libucx-cu11==1.17.0
     # via
-    #   libucxx-cu12
-    #   ucx-py-cu12
-libucxx-cu12==0.40.0
-    # via ucxx-cu12
+    #   libucxx-cu11
+    #   ucx-py-cu11
+libucxx-cu11==0.40.0
+    # via ucxx-cu11
 llvmlite==0.43.0
     # via
     #   -r requirements.in
@@ -320,77 +330,44 @@ notebook-shim==0.2.4
 numba==0.60.0
     # via
     #   -r requirements.in
-    #   cudf-cu12
-    #   cugraph-cu12
-    #   cuml-cu12
+    #   cudf-cu11
+    #   cugraph-cu11
+    #   cuml-cu11
     #   dask-cuda
-    #   distributed-ucxx-cu12
-    #   raft-dask-cu12
-    #   rmm-cu12
+    #   distributed-ucxx-cu11
+    #   raft-dask-cu11
+    #   rmm-cu11
 numpy==2.0.2
     # via
     #   -r requirements.in
     #   contourpy
-    #   cudf-cu12
-    #   cugraph-cu12
-    #   cuml-cu12
-    #   cupy-cuda12x
-    #   cuvs-cu12
+    #   cudf-cu11
+    #   cugraph-cu11
+    #   cuml-cu11
+    #   cupy-cuda11x
+    #   cuvs-cu11
     #   dask-cuda
-    #   dask-cudf-cu12
+    #   dask-cudf-cu11
     #   matplotlib
     #   numba
     #   pandas
     #   pyarrow
-    #   pylibraft-cu12
-    #   rmm-cu12
+    #   pylibraft-cu11
+    #   rmm-cu11
     #   scipy
     #   treelite
-    #   ucx-py-cu12
-    #   ucxx-cu12
-nvidia-cublas-cu12==12.6.3.3
-    # via
-    #   cuml-cu12
-    #   cuvs-cu12
-    #   nvidia-cusolver-cu12
-    #   pylibcugraph-cu12
-    #   pylibraft-cu12
-nvidia-cufft-cu12==11.3.0.4
-    # via cuml-cu12
-nvidia-curand-cu12==10.3.7.77
-    # via
-    #   cuml-cu12
-    #   cuvs-cu12
-    #   pylibcugraph-cu12
-    #   pylibraft-cu12
-nvidia-cusolver-cu12==11.7.1.2
-    # via
-    #   cuml-cu12
-    #   cuvs-cu12
-    #   pylibcugraph-cu12
-    #   pylibraft-cu12
-nvidia-cusparse-cu12==12.5.4.2
-    # via
-    #   cuml-cu12
-    #   cuvs-cu12
-    #   nvidia-cusolver-cu12
-    #   pylibcugraph-cu12
-    #   pylibraft-cu12
-nvidia-nvjitlink-cu12==12.6.77
-    # via
-    #   nvidia-cufft-cu12
-    #   nvidia-cusolver-cu12
-    #   nvidia-cusparse-cu12
+    #   ucx-py-cu11
+    #   ucxx-cu11
 nvtx==0.2.10
     # via
-    #   cudf-cu12
-    #   pylibcudf-cu12
+    #   cudf-cu11
+    #   pylibcudf-cu11
 overrides==7.7.0
     # via jupyter-server
 packaging==24.1
     # via
-    #   cudf-cu12
-    #   cuml-cu12
+    #   cudf-cu11
+    #   cuml-cu11
     #   dask
     #   distributed
     #   ipykernel
@@ -400,15 +377,15 @@ packaging==24.1
     #   jupyterlab-server
     #   matplotlib
     #   nbconvert
-    #   pylibcudf-cu12
+    #   pylibcudf-cu11
     #   pytoolconfig
     #   treelite
 pandas==2.2.2
     # via
     #   -r requirements.in
-    #   cudf-cu12
+    #   cudf-cu11
     #   dask-cuda
-    #   dask-cudf-cu12
+    #   dask-cudf-cu11
     #   dask-expr
 pandocfilters==1.5.1
     # via nbconvert
@@ -432,10 +409,6 @@ platformdirs==4.3.6
     #   yapf
 pluggy==1.5.0
     # via python-lsp-server
-polars==1.8.2
-    # via
-    #   -r requirements-nvidia.in
-    #   cudf-polars-cu12
 prometheus-client==0.21.0
     # via jupyter-server
 prompt-toolkit==3.0.48
@@ -446,6 +419,11 @@ psutil==6.0.0
     # via
     #   distributed
     #   ipykernel
+ptxcompiler-cu11==0.8.1.post2
+    # via
+    #   -r requirements-nvidia.in
+    #   cubinlinker-cu11
+    #   cudf-cu11
 ptyprocess==0.7.0
     # via
     #   pexpect
@@ -454,9 +432,9 @@ pure-eval==0.2.3
     # via stack-data
 pyarrow==17.0.0
     # via
-    #   cudf-cu12
+    #   cudf-cu11
     #   dask-expr
-    #   pylibcudf-cu12
+    #   pylibcudf-cu11
 pycodestyle==2.12.1
     # via
     #   autopep8
@@ -478,29 +456,25 @@ pygments==2.18.0
     #   nbconvert
     #   nbdime
     #   rich
-pylibcudf-cu12==24.10.1
+pylibcudf-cu11==24.10.1
+    # via cudf-cu11
+pylibcugraph-cu11==24.10.0
+    # via cugraph-cu11
+pylibraft-cu11==24.10.0
     # via
-    #   cudf-cu12
-    #   cudf-polars-cu12
-pylibcugraph-cu12==24.10.0
-    # via cugraph-cu12
-pylibraft-cu12==24.10.0
-    # via
-    #   cuml-cu12
-    #   cuvs-cu12
-    #   pylibcugraph-cu12
-    #   raft-dask-cu12
+    #   cuml-cu11
+    #   cuvs-cu11
+    #   pylibcugraph-cu11
+    #   raft-dask-cu11
 pylint==3.3.1
     # via python-lsp-server
 pynvjitlink-cu12==0.3.0
-    # via
-    #   -r requirements-nvidia.in
-    #   cudf-cu12
+    # via -r requirements-nvidia.in
 pynvml==11.4.1
     # via
     #   dask-cuda
-    #   ucx-py-cu12
-    #   ucxx-cu12
+    #   ucx-py-cu11
+    #   ucxx-cu11
 pyparsing==3.2.0
     # via matplotlib
 python-dateutil==2.9.0.post0
@@ -531,18 +505,18 @@ pyzmq==26.2.0
     #   ipykernel
     #   jupyter-client
     #   jupyter-server
-raft-dask-cu12==24.10.0
+raft-dask-cu11==24.10.0
     # via
-    #   cugraph-cu12
-    #   cuml-cu12
+    #   cugraph-cu11
+    #   cuml-cu11
 rapids-dask-dependency==24.10.0
     # via
-    #   cugraph-cu12
-    #   cuml-cu12
+    #   cugraph-cu11
+    #   cuml-cu11
     #   dask-cuda
-    #   dask-cudf-cu12
-    #   distributed-ucxx-cu12
-    #   raft-dask-cu12
+    #   dask-cudf-cu11
+    #   distributed-ucxx-cu11
+    #   raft-dask-cu11
 referencing==0.35.1
     # via
     #   jsonschema
@@ -561,16 +535,16 @@ rfc3986-validator==0.1.1
     #   jsonschema
     #   jupyter-events
 rich==13.9.2
-    # via cudf-cu12
-rmm-cu12==24.10.0
+    # via cudf-cu11
+rmm-cu11==24.10.0
     # via
-    #   cudf-cu12
-    #   cugraph-cu12
-    #   cuml-cu12
-    #   pylibcudf-cu12
-    #   pylibcugraph-cu12
-    #   pylibraft-cu12
-    #   ucxx-cu12
+    #   cudf-cu11
+    #   cugraph-cu11
+    #   cuml-cu11
+    #   pylibcudf-cu11
+    #   pylibcugraph-cu11
+    #   pylibraft-cu11
+    #   ucxx-cu11
 rope==1.13.0
     # via python-lsp-server
 rpds-py==0.20.0
@@ -579,7 +553,7 @@ rpds-py==0.20.0
     #   referencing
 scipy==1.14.1
     # via
-    #   cuml-cu12
+    #   cuml-cu11
     #   treelite
 send2trash==1.8.3
     # via jupyter-server
@@ -614,7 +588,12 @@ terminado==0.18.1
 tinycss2==1.3.0
     # via nbconvert
 tomli==2.0.2
-    # via yapf
+    # via
+    #   autopep8
+    #   jupyterlab
+    #   pylint
+    #   pytoolconfig
+    #   yapf
 tomlkit==0.13.2
     # via pylint
 toolz==1.0.0
@@ -647,22 +626,28 @@ traitlets==5.14.3
     #   nbconvert
     #   nbformat
 treelite==4.3.0
-    # via cuml-cu12
+    # via cuml-cu11
 types-python-dateutil==2.9.0.20241003
     # via arrow
 typing-extensions==4.12.2
     # via
-    #   cudf-cu12
-    #   pylibcudf-cu12
+    #   anyio
+    #   astroid
+    #   async-lru
+    #   cudf-cu11
+    #   ipython
+    #   multidict
+    #   pylibcudf-cu11
     #   pytools
+    #   rich
 tzdata==2024.2
     # via pandas
-ucx-py-cu12==0.40.0
+ucx-py-cu11==0.40.0
     # via
-    #   cugraph-cu12
-    #   raft-dask-cu12
-ucxx-cu12==0.40.0
-    # via distributed-ucxx-cu12
+    #   cugraph-cu11
+    #   raft-dask-cu11
+ucxx-cu11==0.40.0
+    # via distributed-ucxx-cu11
 ujson==5.10.0
     # via
     #   python-lsp-jsonrpc
