--- a/2024-oct-24-python/environment.yaml
+++ b/2024-oct-24-python/environment.yaml
@@ -6,6 +6,8 @@ channels:
 - nodefaults
 dependencies:
 - python 3.10.*
+- numpy >=1.26.4,<2
+- pandas >=1.5.3,<2
 - matplotlib-base >=3.9,<4
 - numba >=0.60.0,<0.61
 - cuda-version >=11.2,<12.0
