--- a/2024-oct-24-python/pixi.toml
+++ b/2024-oct-24-python/pixi.toml
@@ -13,6 +13,8 @@ sync = { depends-on = ["sync-conda", "sync-pip"] }
 
 [dependencies]
 python = "3.10.*"
+numpy = ">=1.26.4,<2"
+pandas = ">=1.5.3,<2"
 matplotlib-base = ">=3.9,<4"
 
 numba = ">=0.60.0,<0.61"
