Add cudnn for Jax CUDA to work

--- a/2024-oct-24-python/pixi.toml
+++ b/2024-oct-24-python/pixi.toml
@@ -50,9 +50,11 @@ cupy = ">=11.6.0,<12"
 pycuda = ">=2024.1,<2025"
 cuda-nvcc = { version = ">=11,<12", channel = "nvidia" }
 
+## jax
 ## https://github.com/prefix-dev/pixi/issues/1288
 #jax = ">=0.4.23"
 #jaxlib = { version = ">=0.4.23,<0.4.25", build = "*cuda11*" }
+cudnn = ">=8.9.7.29,<9"
 
 [pypi-options]
 index-url = "https://pypi.org/simple"
