--- a/2024-oct-24-python/pixi.toml
+++ b/2024-oct-24-python/pixi.toml
@@ -75,4 +75,6 @@ jupyterlab-git = ">=0.50.1, <0.51"
 jupyterlab-lsp = ">=5.1.0, <6"
 python-lsp-server = { version = ">=1.12.0, <2", extras = ["all"] }
 pytest = ">=8.3.3, <9"
+requests = ">=2.32.3, <3"
+aiohttp = ">=3.10.10, <4"
 
