--- a/2024-oct-24-python/requirements-nvidia.in
+++ b/2024-oct-24-python/requirements-nvidia.in
@@ -1,6 +1,6 @@
 --extra-index-url=https://pypi.nvidia.com
 # https://numba.readthedocs.io/en/stable/cuda/minor_version_compatibility.html#minor-version-compatibility
- pynvjitlink-cu12
+pynvjitlink-cu12
 ptxcompiler-cu11
 cubinlinker-cu11
 # https://rapids.ai/#quick-start
@@ -8,6 +8,7 @@ cudf-cu11==24.10.*
 dask-cudf-cu11==24.10.*
 cuml-cu11==24.10.*
 cugraph-cu11==24.10.*
+nvidia-cudnn-cu11
 # https://rapids.ai/polars-gpu-engine/#get-started
 # Requires CUDA 12
 # polars[gpu]
