--- a/2024-oct-24-python/requirements.txt
+++ b/2024-oct-24-python/requirements.txt
@@ -8,7 +8,9 @@
 aiohappyeyeballs==2.4.3
     # via aiohttp
 aiohttp==3.10.10
-    # via fsspec
+    # via
+    #   -r requirements.in
+    #   fsspec
 aiosignal==1.3.1
     # via aiohttp
 anyio==4.6.2.post1
@@ -373,6 +375,10 @@ numpy==2.0.2
     #   treelite
     #   ucx-py-cu11
     #   ucxx-cu11
+nvidia-cublas-cu11==11.11.3.6
+    # via nvidia-cudnn-cu11
+nvidia-cudnn-cu11==9.5.0.50
+    # via -r requirements-nvidia.in
 nvtx==0.2.10
     # via
     #   cudf-cu11
@@ -541,6 +547,7 @@ referencing==0.35.1
     #   jupyter-events
 requests==2.32.3
     # via
+    #   -r requirements.in
     #   jupyterlab-server
     #   nbdime
 rfc3339-validator==0.1.4
